[style] Set heights to avoid resize when address bar goes off on mobile

--- a/src/client/css/_global-styles.scss
+++ b/src/client/css/_global-styles.scss
@@ -1,5 +1,10 @@
 // Global settings
+html {
+	height: 100%;
+}
+
 body {
+	height: 100%;
 	margin: 0;
 	box-sizing: border-box;
 	font: {
@@ -7,6 +12,10 @@ body {
 		size: 16px;
 	}
 	background-color: $quaternary-color;
+}
+
+#app {
+	height: 100%;
 }
 
 .hidden {
